k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  selector:
    app: app-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
      name: mongo-pod
  ports:
    - port: 27017
      targetPort: 27017
